Code cleaning :wq